--- a/Client/package.json
+++ b/Client/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "core-js": "^3.0.0",
+    "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.0"
@@ -29,9 +29,9 @@
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "^11.11.7",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^11.11.7",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,6 +43,6 @@
     "protractor": "~6.0.0",
     "ts-node": "^8.0.3",
     "tslint": "5.14.0",
-    "typescript": "~3.3.4000"
+    "typescript": "^3.2.4"
   }
 }
