--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ jobs:
       - npm i
       - npm run lint
     - # Second job - Backend
-      name: "Nestjs"
+      name: "Loopback"
       language: node_js
       os: linux
       node_js: "10"
       script:
-      - cd Server
+      - cd Backend
       - npm i
       - npm run lint
     - stage: "Build"
@@ -32,13 +32,13 @@ jobs:
       script: 
       - ng build --prod
     - # Second job - Backend
-      name: "Nestjs"
+      name: "Loopback"
       language: node_js
       os: linux
       node_js: "10"
       before_script:
-      - cd Server
-      - npm install -g @nestjs/cli
+      - cd Backend
+      - npm install -g @loopback/cli
       - npm install
       script:
-      - npm run prestart:prod
+      - npm run build
