--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -19,19 +19,11 @@
     },
     "Scheduler": {
       "commandName": "Project",
-      "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values",
-      "environmentVariables": {},
-      "httpPort": 41650
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
