Add JWT, Register and Login (Server Side)

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtKey": "VERY_MUCH_SECRET_KEY_SCHEDULER",
+  "JwtIssuer": "http://utalca.scheduler.cl",
+  "JwtExpireDays": 30
 }
