--- a/Client/package.json
+++ b/Client/package.json
@@ -37,6 +37,7 @@
     "hammerjs": "2.0.8",
     "jquery": "^3.4.1",
     "moment": "2.22.1",
+    "ngx-bootstrap": "^5.1.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rxjs": "~6.5.2",
