--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/platform-server": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "ajv": "6.4.0",
     "arrive": "2.4.1",
     "bootstrap": "^4.3.1",
@@ -36,6 +37,7 @@
     "googleapis": "28.1.0",
     "hammerjs": "2.0.8",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "moment": "2.22.1",
     "ngx-bootstrap": "^5.1.0",
     "perfect-scrollbar": "1.1.0",
