--- a/Client/package.json
+++ b/Client/package.json
@@ -44,6 +44,7 @@
     "popper.js": "1.14.3",
     "rxjs": "~6.5.2",
     "rxjs-compat": "6.3.3",
+    "sweetalert2": "^8.15.2",
     "tslib": "^1.9.0",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
     "zone.js": "~0.9.1"
