--- a/Client/package.json
+++ b/Client/package.json
@@ -34,12 +34,12 @@
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
     "express": "4.16.3",
-    "googleapis": "28.1.0",
     "hammerjs": "2.0.8",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "2.22.1",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-spinner": "^8.0.3",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rxjs": "~6.5.2",
