--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "^8.2.2",
     "@angular/material": "^8.0.0",
+    "@angular/material-moment-adapter": "^8.2.0",
     "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "^8.2.2",
     "@angular/platform-server": "^8.2.2",
@@ -37,7 +38,7 @@
     "hammerjs": "2.0.8",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
-    "moment": "2.22.1",
+    "moment": "^2.22.1",
     "ngx-bootstrap": "^5.1.0",
     "ngx-spinner": "^8.0.3",
     "perfect-scrollbar": "1.1.0",
