--- a/Client/package.json
+++ b/Client/package.json
@@ -12,67 +12,67 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.0.1",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.2.14",
-    "@angular/material": "^8.0.0",
-    "@angular/material-moment-adapter": "^8.2.0",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/animations": "^9.1.12",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/forms": "^9.1.12",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/platform-server": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "@types/jwt-decode": "^2.2.1",
     "ajv": "6.10.2",
     "arrive": "2.4.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.2",
     "bootstrap-material-design": "4.1.1",
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.0",
     "classlist.js": "1.1.20150312",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.11",
     "express": "4.16.3",
     "hammerjs": "2.0.8",
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
-    "moment": "^2.22.1",
-    "ngx-bootstrap": "^5.1.0",
-    "ngx-spinner": "^8.0.3",
+    "moment": "^2.27.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-spinner": "^8.1.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
     "rxjs": "~6.6.2",
     "rxjs-compat": "6.3.3",
-    "sweetalert2": "^8.15.2",
-    "tslib": "^1.9.0",
-    "web-animations-js": "github:angular/web-animations-js#release_pr208",
-    "zone.js": "~0.9.1"
+    "sweetalert2": "^8.19.0",
+    "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.7",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@types/googlemaps": "3.30.8",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "1.10.31",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.14.1",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.9.0"
+    "typescript": "3.6.4"
   }
 }
